# python-samaraenergo

./: pyproject.toml  secrets.json.example
.github/workflows/: pypi.yml
samaraenergo/calc/: __init__.py
samaraenergo/client/: __main__.py  client.py  models.py  qrcode.py
